src/test/ui/libstd-case-typo/mem.stderr
error[E0412]: cannot find type `discriminant` in this scope
  --> $DIR/mem.rs:4:18
   |
LL | fn test_disc(_x: discriminant<()>){}
   |                  ^^^^^^^^^^^^
   |                  |
   |                  not found in this scope
   |                  help: found a std struct with a similar name: `std::mem::Discriminant`

error[E0412]: cannot find type `Manuallydrop` in this scope
  --> $DIR/mem.rs:6:21
   |
LL | fn test_mandrop(_x: Manuallydrop<()>){}
   |                     ^^^^^^^^^^^^
   |                     |
   |                     not found in this scope
   |                     help: found a std struct with a similar name: `std::mem::ManuallyDrop`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
